# Copyright (c) 2016 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

group("gn_tutorial") {
  # This target shall build all targets in examples.
  deps = [
      ":hello_world",
      ":say_hello",
  ]

}

executable("hello_world") {
    sources = [
         "hello_world.cc",
    ]
    deps = []
}

static_library("hello") {
  sources = [
    "hello.cc",
  ]
}

executable("say_hello") {
  sources = [
    "say_hello.cc",
  ]
  deps = [
    ":hello",
  ]
}
